css, index, portfolio have been changed
The names of some classes have been changed, and the stylization of buttons in the portfolio.html has been added.

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,14 +15,14 @@
         <nav class="navigation"> 
             <a class="logo" href="./index.html"><p class="header-blue-logo" lang="en">Web<span class="header-black-logo">Studio</span></p></a>
             <ul class="navigation-list">
-                <li><a class="studio" href="./index.html">Студія</a></li>
-                <li><a class="portfolio" href="portfolio.html">Портфоліо</a></li>
-                <li><a class="contacts" href="#">Контакти</a></li>
+                <li><a class="nav-link" href="./index.html">Студія</a></li>
+                <li><a class="nav-link" href="portfolio.html">Портфоліо</a></li>
+                <li><a class="nav-link" href="#">Контакти</a></li>
             </ul>
         </nav>
         <ul class="header-adress">
-            <li><a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="header-phone" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a class="adress-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a class="adress-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
