--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="navigation"> 
             <a class="logo" href="./index.html"><p class="header-blue-logo" lang="en">Web<span class="header-black-logo">Studio</span></p></a>
             <ul class="navigation-list">
-                <li><a class="nav-link" href="./index.html">Студія</a></li>
+                <li><a class="nav-link current" href="./index.html">Студія</a></li>
                 <li><a class="nav-link" href="portfolio.html">Портфоліо</a></li>
                 <li><a class="nav-link" href="#">Контакти</a></li>
             </ul>
